@@ -4,7 +4,7 @@
 
 ---
 conf.py:
-  copyright: 2008-2016
+  copyright: 2010-2017
   project: Fluid-based Data Consumer
   version: 2.0
   release: 2.0.0
