@@ -1,0 +1,4 @@
+# Extension fluiddisplay
+
+This extension is a Tesseract component. It is a Data Consumer based on Fluid templates.
+Refer to the [manual for more details](https://docs.typo3.org/typo3cms/extensions/fluiddisplay/).
