@@ -1,1 +1,0 @@
-Tesseract Data Consumer based on Fluid templates. Refer to the manual for more details.
