@@ -22,7 +22,7 @@
 	},
 	"version": "2.0.0",
 	"require": {
-		"typo3/cms-core": ">=7.6.0,<8.0",
+		"typo3/cms-core": ">=7.6.0,<9.0",
 		"tesseract/tesseract": ">=2.0.0"
 	},
 	"replace": {
