@@ -1,12 +1,14 @@
 <?php
 
-/*********************************************************************
-* Extension configuration file for ext "fluiddisplay".
-*
-* Generated by ext 24-04-2016 10:29 UTC
-*
-* https://github.com/t3elmar/Ext
-*********************************************************************/
+/***************************************************************
+ * Extension Manager/Repository config file for ext "fluiddisplay".
+ *
+ * Auto generated 15-05-2017 10:51
+ *
+ * Manual updates:
+ * Only the data in the array - everything else is removed by next
+ * writing. "version" and "dependencies" must not be touched!
+ ***************************************************************/
 
 $EM_CONF[$_EXTKEY] = array (
   'title' => 'Fluid-based Data Consumer - Tesseract project',
@@ -34,9 +36,6 @@ $EM_CONF[$_EXTKEY] = array (
     array (
     ),
   ),
-  '_md5_values_when_last_written' => 'a:34:{s:9:"ChangeLog";s:4:"68f2";s:11:"LICENSE.txt";s:4:"6404";s:10:"README.txt";s:4:"5078";s:13:"composer.json";s:4:"a01a";s:12:"ext_icon.png";s:4:"1ce9";s:17:"ext_localconf.php";s:4:"1085";s:14:"ext_tables.php";s:4:"6c01";s:14:"ext_tables.sql";s:4:"9c07";s:34:"Classes/Component/DataConsumer.php";s:4:"1f36";s:53:"Classes/ViewHelpers/SubstitutePageTitleViewHelper.php";s:4:"78d0";s:46:"Configuration/TCA/tx_fluiddisplay_displays.php";s:4:"0d73";s:26:"Documentation/Includes.txt";s:4:"6d5f";s:23:"Documentation/Index.rst";s:4:"6c6d";s:26:"Documentation/Settings.yml";s:4:"96b8";s:33:"Documentation/Developer/Index.rst";s:4:"42c0";s:44:"Documentation/Images/FluidDisplayElement.png";s:4:"c2c4";s:49:"Documentation/Images/SampleTemplateController.png";s:4:"7286";s:44:"Documentation/Images/SampleTemplateQuery.png";s:4:"6d8b";s:36:"Documentation/Installation/Index.rst";s:4:"86ff";s:36:"Documentation/Introduction/Index.rst";s:4:"5584";s:37:"Documentation/KnownProblems/Index.rst";s:4:"66af";s:28:"Documentation/User/Index.rst";s:4:"5131";s:42:"Documentation/User/FluidPartials/Index.rst";s:4:"a240";s:40:"Documentation/User/InputScreen/Index.rst";s:4:"fb43";s:45:"Documentation/User/LocalizedStrings/Index.rst";s:4:"05b4";s:43:"Documentation/User/SampleTemplate/Index.rst";s:4:"a54a";s:40:"Documentation/User/ViewHelpers/Index.rst";s:4:"d6c1";s:67:"Resources/Private/Language/locallang_csh_txfluiddisplaydisplays.xlf";s:4:"5d5c";s:43:"Resources/Private/Language/locallang_db.xlf";s:4:"d18f";s:48:"Resources/Public/Icons/AddFluidDisplayWizard.png";s:4:"9cf0";s:39:"Resources/Public/Icons/FluidDisplay.png";s:4:"cd04";s:21:"Samples/locallang.xlf";s:4:"d907";s:27:"Samples/sampleTemplate.html";s:4:"62fc";s:35:"Samples/Partials/samplePartial.html";s:4:"3bef";}',
-  'comment' => 'Verified compatibility with TYPO3 CMS 7; refactored using namespaces.',
-  'user' => 'francois',
+  '_md5_values_when_last_written' => 'a:36:{s:9:"ChangeLog";s:4:"1979";s:11:"LICENSE.txt";s:4:"6404";s:9:"README.md";s:4:"b43d";s:13:"composer.json";s:4:"ce69";s:12:"ext_icon.png";s:4:"1ce9";s:17:"ext_localconf.php";s:4:"1085";s:14:"ext_tables.php";s:4:"a10e";s:14:"ext_tables.sql";s:4:"9c07";s:34:"Classes/Component/DataConsumer.php";s:4:"0742";s:53:"Classes/ViewHelpers/SubstitutePageTitleViewHelper.php";s:4:"78d0";s:46:"Configuration/TCA/tx_fluiddisplay_displays.php";s:4:"e1a6";s:42:"Configuration/TCA/Overrides/tt_content.php";s:4:"064f";s:56:"Configuration/TCA/Overrides/tx_fluiddisplay_displays.php";s:4:"c321";s:26:"Documentation/Includes.txt";s:4:"6d5f";s:23:"Documentation/Index.rst";s:4:"6c6d";s:26:"Documentation/Settings.yml";s:4:"96b8";s:33:"Documentation/Developer/Index.rst";s:4:"42c0";s:44:"Documentation/Images/FluidDisplayElement.png";s:4:"c2c4";s:49:"Documentation/Images/SampleTemplateController.png";s:4:"7286";s:44:"Documentation/Images/SampleTemplateQuery.png";s:4:"6d8b";s:36:"Documentation/Installation/Index.rst";s:4:"86ff";s:36:"Documentation/Introduction/Index.rst";s:4:"5584";s:37:"Documentation/KnownProblems/Index.rst";s:4:"66af";s:28:"Documentation/User/Index.rst";s:4:"5131";s:42:"Documentation/User/FluidPartials/Index.rst";s:4:"a240";s:40:"Documentation/User/InputScreen/Index.rst";s:4:"fb43";s:45:"Documentation/User/LocalizedStrings/Index.rst";s:4:"05b4";s:43:"Documentation/User/SampleTemplate/Index.rst";s:4:"a54a";s:40:"Documentation/User/ViewHelpers/Index.rst";s:4:"d6c1";s:67:"Resources/Private/Language/locallang_csh_txfluiddisplaydisplays.xlf";s:4:"5d5c";s:43:"Resources/Private/Language/locallang_db.xlf";s:4:"c9fb";s:48:"Resources/Public/Icons/AddFluidDisplayWizard.png";s:4:"9cf0";s:39:"Resources/Public/Icons/FluidDisplay.png";s:4:"cd04";s:21:"Samples/locallang.xlf";s:4:"d907";s:27:"Samples/sampleTemplate.html";s:4:"62fc";s:35:"Samples/Partials/samplePartial.html";s:4:"3bef";}',
 );
 
-?>
