@@ -1,3 +1,7 @@
+2017-05-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Verified compatibility with TYPO3 CMS 8
+
 2016-04-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added composer manifest, resolves #75891
